Add further validation to fancy forms

--- a/fancy-forms/index.html
+++ b/fancy-forms/index.html
@@ -28,6 +28,7 @@
 		</div>
 
 		<div class="form-wrapper">
+			<div class="error address-error"></div>
 			<label>Address<input type="text" class="address" placeholder="Your Address">
 			</label>
 		</div>
